<resources>
    <string name="app_name">Registration Form</string>
    <string name="registration_form">Registration Form</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone">Your Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="a"/>
    <string name="b"/>
    <string name="c"/>
    <string name="d"/>
    <string name="e"/>
    <string name="nme" />
    <string name="phn" />
    <string name="eml" />
    <string name="adr" />
    <string name="date" />
</resources>
