<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameDisplay">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="503dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nm"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/nme" />

        <TextView
            android:id="@+id/ph"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phn" />

        <TextView
            android:id="@+id/em"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/eml" />

        <TextView
            android:id="@+id/db"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/ad"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/adr" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>